# amplifier

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  DISCOVERIES.md  Makefile  Q_Migration_plan.md  README.md  SUPPORT.md  pyproject.toml
.ai/docs/: notifications.md
.amazonq/: README.md
.amazonq/agents/: security-guardian.json  security-guardian.md
.amazonq/cli-todo-lists/: 1761151535600.json
.claude/: README.md  settings.json
.claude/agents/: amplifier-cli-architect.md  analysis-engine.md  api-contract-designer.md  bug-hunter.md  modular-builder.md  post-task-cleanup.md  subagent-architect.md  zen-architect.md
.claude/commands/: commit.md  create-plan.md  review-changes.md  ultrathink-task.md
.claude/commands/ddd/: 0-help.md  1-plan.md  2-docs.md  3-code-plan.md  4-code.md  5-finish.md  prime.md  status.md
.claude/tools/: hook_precompact.py  notify.sh  subagent-logger.py
.devcontainer/: OPTIMIZING_FOR_CODESPACES.md  POST_SETUP_README.md  devcontainer.json  post-create.sh
ai_context/claude_code/: CLAUDE_CODE_CLI_REFERENCE.md  CLAUDE_CODE_COMMON_WORKFLOWS.md  CLAUDE_CODE_HOOKS.md  CLAUDE_CODE_OUTPUT_STYLES.md  CLAUDE_CODE_SDK_OVERVIEW.md  CLAUDE_CODE_SETTINGS.md  CLAUDE_CODE_SLASH_COMMANDS.md  CLAUDE_CODE_STATUS_LINE_CONFIGURATION.md
ai_context/git_collector/: CLAUDE_CODE_SDK_PYTHON_REPO.md
ai_working/: ccsdk-amplifier-improvement-plan.md  md-synthesizer-evolution-analysis.md
ai_working/claude_code_remoting/: SECURITY_AND_MOBILE.md
ai_working/knowledge_integration/: WORKFLOW.md  knowledge_store.py  query_knowledge.py
amplifier/: README.md
amplifier/ccsdk_toolkit/: DEVELOPER_GUIDE.md  README.md  example.py
amplifier/ccsdk_toolkit/cli/: __init__.py  templates.py
amplifier/ccsdk_toolkit/config/: models.py
amplifier/ccsdk_toolkit/core/: models.py  session.py  utils.py
amplifier/ccsdk_toolkit/defensive/: __init__.py
amplifier/config/: README.md
amplifier/content_loader/: loader.py
amplifier/knowledge/: graph_builder.py
amplifier/knowledge_integration/: unified_extractor.py
amplifier/knowledge_mining/: knowledge_extractor.py
amplifier/knowledge_synthesis/: README.md  __init__.py  article_processor.py  cli.py  extractor.py  run_synthesis.py  store.py
amplifier/slides_tool/: INSTALL.md  README.md  __init__.py  __main__.py  cli.py  exporter.py  generator.py  models.py  state_manager.py  utils.py
amplifier/synthesis/: main.py
claude-web/: .gitignore  README.md  pyproject.toml
claude-web/backend/: app.py  claude_bridge.py  config.py
claude-web/frontend/: app.js  index.html  manifest.json
db_setup/: __init__.py  connection.py  connection_managed_identity.py  schema.py  setup.py
docs/: AMPLIFIER_SLIDES_TOOL.md  AZURE_POSTGRESQL_AUTOMATION.md  AZURE_POSTGRESQL_MANAGED_IDENTITY.md  AZURE_POSTGRESQL_SETUP.md  REMOVED_POSTGRESQL.md  WORKSPACE_PATTERN.md  WORKTREE_VENV_MANAGEMENT.md
docs/document_driven_development/: README.md
infrastructure/azure/: postgresql-managed-identity.bicep  postgresql.bicep  setup-postgresql-managed.sh  setup-postgresql.sh  teardown-postgresql.sh
scenarios/: README.md
scenarios/blog_writer/: test_feedback_only.py  test_fixes.py
scenarios/transcribe/: test_cache.py
test_writings/: sample.md
tests/: __init__.py  conftest.py  test_parallel_execution.py
tests/terminal_bench/: run_terminal_bench.py
tools/: README.md  check_stubs.py  codex_transcripts_compiler.py  create_worktree.py  remove_worktree.py  worktree_manager.py
tools/makefiles/: recursive.mk
trace_viewer/: __init__.py  __main__.py  parser.py  server.py  subagent_detector.py
trace_viewer/static/: app.js  style.css  syntax-highlight.css
trace_viewer/templates/: index.html
(+27 files in other folders)
