[project]
name = "claude-web"
version = "0.1.0"
description = "Claude Web Interface"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "python-multipart==0.0.20",
    "sqlalchemy==2.0.37",
    "pydantic==2.10.5",
    "pydantic-settings==2.7.0",
    "sse-starlette==2.2.1",
    "claude-code-sdk==0.0.20",
    "aiohttp>=3.12.15",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "httpx>=0.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend", "frontend"]
